--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,48 @@
+h1 {
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 3rem;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+
+
 body {
-    background-color: black;
-    color: white;
+    background-color: rgb(190, 221, 223);
+    color: teal
+    ;
+
+}
+
+button {
+    height: 75px;
+    width: 75px;
+    border-radius: 40%;
+    border-color: white;
+    border-width: 0.4rem;
+    
+    font-size: xx-large;
+    margin: 10px;
+}
+
+.calculatorFrame {
+    background: linear-gradient( rgb(1, 173, 173), pink);
+    display: inline-block;
+    position: relative;
+    left: 35.7%;
+    
+    padding: 0 20px;
+    border-radius: 10%;
+    margin: auto;
+    margin-top: 30px;
+
+}
+
+#display {
+    height: 50px;
+    border: 4px solid rgb(255, 255, 255);
+    border-radius: 20px;
 }
