--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ h1 {
     font-family: 'Merriweather', serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 3rem;
+    font-size: 3.5rem;
     margin-bottom: 15px;
     margin-top: 15px;
 }
@@ -37,7 +37,8 @@ button {
     padding: 0 20px;
     border-radius: 10%;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 5px;
+    
 
 }
 
@@ -45,4 +46,13 @@ button {
     height: 50px;
     border: 4px solid rgb(255, 255, 255);
     border-radius: 20px;
+    text-align: right;
+    font-size: 1rem;
+    line-height: 4rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: white;
+    padding-right: 10px;
+
+   
 }
