--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ button {
     
     font-size: xx-large;
     margin: 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .calculatorFrame {
